plugins {
    id 'java'
}

group = 'com.github'
version = '1.0-SNAPSHOT'

java {
    sourceCompatibility = "1.8"
    targetCompatibility = "1.8"
}

repositories {
    mavenCentral()
}

dependencies {
}

test {
    useJUnitPlatform()
}